--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/PeriodoPresupuesto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/PeriodoPresupuesto/Anular.cshtml
@@ -22,6 +22,13 @@
     @Html.HiddenFor(q => q.IdPeriodo);
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="DescripcionPeriodo">Descripción*</label>
+                    @Html.TextBoxFor(q => q.DescripcionPeriodo, new { @class = "form-control", id = "DescripcionPeriodo" })
+                    @Html.ValidationMessageFor(q => q.DescripcionPeriodo, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="FechaInicio">Fecha de inicio*</label>
@@ -52,7 +59,7 @@
                     @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="FechaFin"></label>
                     @Html.DevExpress().CheckBoxFor(q => q.EstadoCierre, settings =>
@@ -95,5 +102,30 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
+<script type="text/javascript">
+    function MostrarDescripcion() {
+        var fecha_inicio = FechaInicio.GetValue();
+        var fecha_fin = FechaFin.GetValue();
+        var pad = "00";
+
+        var dia_inicio = fecha_inicio.getUTCDate();
+        var mes_inicio = fecha_inicio.getUTCMonth() + 1;
+        var anio_inicio = fecha_inicio.getUTCFullYear();
+        var mes_format = pad.substr(0, (pad.length - String(mes_inicio).length)) + mes_inicio;
+        var dia_format = pad.substr(0, (pad.length - String(dia_inicio).length)) + dia_inicio;
+
+        var dia_fin = fecha_fin.getUTCDate();
+        var mes_fin = fecha_fin.getUTCMonth() + 1;
+        var anio_fin = fecha_fin.getUTCFullYear();
+        var mes_fin_format = pad.substr(0, (pad.length - String(mes_fin).length)) + mes_fin;
+        var dia_fin_format = pad.substr(0, (pad.length - String(dia_fin).length)) + dia_fin;
+
+        var desde = anio_inicio + "-" + mes_format + "-" + dia_format;
+        var hasta = anio_fin + "-" + mes_fin_format + "-" + dia_fin_format;
+
+        $("#DescripcionPeriodo").val("Periodo desde: " + desde + " hasta: " + hasta);
+    };
+</script>
 
 
