--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
@@ -30,14 +30,14 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="pe_mes">Mes</label>
-                    @Html.DropDownListFor(q => q.pe_mes, new SelectList(ViewBag.lst_Mes, "idMes", "smes"), new { @class = "form-control", @id = "smes" })
+                    @Html.DropDownListFor(q => q.pe_mes, new SelectList(ViewBag.lst_Mes, "idMes", "smes"), new { @class = "form-control", @id = "smes", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.pe_mes, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdanioFiscal">Año fiscal</label>
-                    @Html.DropDownListFor(q => q.IdanioFiscal, new SelectList(ViewBag.lst_anio_fiscal, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "IdanioFiscal" })
+                    @Html.DropDownListFor(q => q.IdanioFiscal, new SelectList(ViewBag.lst_anio_fiscal, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "IdanioFiscal", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdanioFiscal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -53,7 +53,17 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.pe_FechaIni, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pe_FechaIni" })
+                        @Html.DevExpress().DateEditFor(q => q.pe_FechaIni, settings =>
+                       {
+                           settings.Name = "pe_FechaIni";
+                           settings.Properties.UseMaskBehavior = true;
+                           settings.Properties.EditFormat = EditFormat.Date;
+                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                           settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           //settings.Properties.ClientSideEvents.DateChanged = "function(s,e){actualizar_periodo();}";
+
+                       }).GetHtml()
                         @Html.ValidationMessageFor(q => q.pe_FechaIni, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -65,7 +75,17 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.pe_FechaFin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pe_FechaFin" })
+                        @Html.DevExpress().DateEditFor(q => q.pe_FechaFin, settings =>
+                        {
+                            settings.Name = "pe_FechaFin";
+                            settings.Properties.UseMaskBehavior = true;
+                            settings.Properties.EditFormat = EditFormat.Date;
+                            settings.Properties.EditFormatString = "dd/MM/yyyy";
+                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            //settings.Properties.ClientSideEvents.DateChanged = "function(s,e){actualizar_periodo();}";
+
+                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.pe_FechaFin, "", new { @class = "text-danger" })
                     </div>
                 </div>
