--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_fac.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_fac.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridViewPartial_fabricacion_det_fac";
         settings.CallbackRouteValues = new { Controller = "Fabricacion", Action = "GridViewPartial_fabricacion_det_fac", Area = "Produccion"};
-        settings.KeyFieldName = "IdSecuencial";
+        settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
 
