--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_fac.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_fac.cshtml
@@ -79,7 +79,9 @@
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
         });
-        
+
+        settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
+        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
     });
 }
 @grid.Bind(Model).GetHtml()
