--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -196,7 +196,7 @@
         <div class="col-md-6">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdBanco_acreditacion">Tipo flujo</label>
+                    <label for="IdBanco_acreditacion">Tipo flujo*</label>
                     @Html.Partial("_CmbFlujo_Deudas", Model.IdTipoFlujo)
                     @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
                 </div>
