--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
@@ -9,6 +9,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
+
         $(function () {
             CargarBodegaIngreso();
             CargarBodegaEgreso();
@@ -19,6 +20,21 @@
                 CargarBodegaEgreso();
             });
         });
+
+
+        var selectedIDs;
+        function OnBeginCallback(s, e) {
+            e.customArgs["selectedIDs"] = selectedIDs;
+        };
+
+        function OnSelectionChanged(s, e) {
+            s.GetSelectedFieldValues("Secuencia", GetSelectedFieldValuesCallback);
+        };
+
+        function GetSelectedFieldValuesCallback(values) {
+            //Capture all selected keys
+            selectedIDs = values.join(',');
+        };
         function CargarBodegaIngreso() {
     $("#ing_IdBodega").empty();
 
@@ -107,7 +123,7 @@
             IdEmpresa: $("#IdEmpresa").val(),
             IdSucursal: $("#egr_IdSucursal").val(),
             IdBodega: $("#egr_IdBodega").val(),
-            NumeroFactura: $("#NumeroFactura").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -128,6 +144,31 @@
         });
         GridViewPartial_fabricacion_det_fac.UnselectRows();
         GridViewPartial_fabricacion_det_fac.PerformCallback();
+    };
+    function AddFacturas() {
+        var datos = {
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew", "Fabricacion", new { Area = "Produccion" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        selectedIDs = "";
+        GridViewPartial_fabricacion_det_fac.PerformCallback();
+        GridViewPartial_fabricacion_det_fac.UnselectRows();
+        $("#ModalFacturas").modal("hide");
+        GridViewPartial_fabricacion_det_ing.PerformCallback();
     };
 </script>
 @using (Html.BeginForm("Nuevo", "Fabricacion", FormMethod.Post, new { @class = "form", @role = "form" }))
@@ -198,53 +239,16 @@
         </div>
 
         <div class="col-md-6">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="">Desde*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.DevExpress().DateEditFor(q => q.FechaIni, settings =>
-                                           {
-                                               settings.Name = "FechaIni";
-                                               settings.Properties.UseMaskBehavior = true;
-                                               settings.Properties.EditFormat = EditFormat.Date;
-                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                           }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.FechaIni, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="">Hasta*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.DevExpress().DateEditFor(q => q.FechaFin, settings =>
-                                           {
-                                               settings.Name = "FechaFin";
-                                               settings.Properties.UseMaskBehavior = true;
-                                               settings.Properties.EditFormat = EditFormat.Date;
-                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                           }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for=""></label>
-                        <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas();">Productos facturados</button>
-                    </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for=""></label>
+                    <button type="button" class="btn btn-primary form-control" id="btn_buscar" onclick="MostrarModalFacturas();">
+                        <i class="fa fa-search"></i> Productos facturados
+                    </button>
                 </div>
             </div>
+
+        </div>
 
     </div>
     <div class="modal fade" id="ModalFacturas" role="dialog">
@@ -253,7 +257,57 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Productos</h4>
+                    <h4 class="modal-title">Facturas</h4>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="">Desde*</label>
+                                    <div class="input-group date">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </div>
+                                        @Html.DevExpress().DateEditFor(q => q.FechaIni, settings =>
+                                           {
+                                               settings.Name = "FechaIni";
+                                               settings.Properties.UseMaskBehavior = true;
+                                               settings.Properties.EditFormat = EditFormat.Date;
+                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           }).GetHtml()
+                                        @Html.ValidationMessageFor(q => q.FechaIni, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-offset-1 col-md-4">
+                                <div class="form-group">
+                                    <label for="">Hasta*</label>
+                                    <div class="input-group date">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </div>
+                                        @Html.DevExpress().DateEditFor(q => q.FechaFin, settings =>
+                                           {
+                                               settings.Name = "FechaFin";
+                                               settings.Properties.UseMaskBehavior = true;
+                                               settings.Properties.EditFormat = EditFormat.Date;
+                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           }).GetHtml()
+                                        @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for=""> </label>
+                                    <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas();">Buscar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-body">
                     @Html.Action("GridViewPartial_fabricacion_det_fac")
